# qtdemo_budget_tracker

./: README.md
DemoBudgetTracker/: CMakeLists.txt  DemoBudgetTracker.qmlproject  ExpenseControls.qml  ExpensesTable.qml  main.qml  qmlmodules
DemoBudgetTracker/content/: App.qml  Screen01.ui.qml
DemoBudgetTracker/imports/: CMakeLists.txt
DemoBudgetTracker/imports/DemoBudgetTracker/: CMakeLists.txt  qmldir
DemoBudgetTracker/imports/DemoBudgetTracker/designer/: plugin.metainfo
DemoBudgetTracker/src/: common.h  database.cpp  database.h  import_qml_plugins.h  main.cpp  tablemodel.cpp  tablemodel.h
